--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node index.ts",
-    "build": "tsc index.ts --outDir dist --target ES2020 --module commonjs"
+    "build": "tsc"
   },
   "dependencies": {
     "cors": "^2.8.5",
