--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -18,6 +19,7 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.18",
     "@types/express-rate-limit": "^5.1.3",
